# tasks

./: .gitignore  CLAUDE.md  mise.toml  mkdocs.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml  deploy-docs.yml
docs/: gen_ref_pages.py  index.md
docs/coding-agent/: index.md
docs/mise-tasks/: index.md  tasks.md
mise-tasks/: foo  format-github-refs  lazydocker  new-python-script  open-daily-note  query-notes  update-daily-work
