[project]
name = "tasks"
version = "0.1.0"
description = "Personal tasks repository"
requires-python = ">=3.13"
dependencies = [
    "journal-lib",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
journal-lib = { workspace = true }

[dependency-groups]
dev = [
    "ipython>=9.4.0,<10.0.0",
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocstrings[python]>=0.26.0,<1.0.0",
    "mkdocs-gen-files>=0.5.0,<1.0.0",
    "mkdocs-literate-nav>=0.6.0,<1.0.0",
    "mkdocs-section-index>=0.3.9,<1.0.0",
]
