[project]
name = "tasks"
version = "0.1.0"
description = "Personal tasks repository"
requires-python = ">=3.13"
dependencies = [
    "journal-lib",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
journal-lib = { workspace = true }

[dependency-groups]
dev = [
    # Development tools
    "ipython>=9.4.0,<10.0.0",
    # Testing dependencies
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    # Code quality tools
    "ruff>=0.8.0",
    "ty>=0.0.0a6",
    # Documentation dependencies
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocstrings[python]>=0.26.0,<1.0.0",
    "mkdocs-gen-files>=0.5.0,<1.0.0",
    "mkdocs-literate-nav>=0.6.0,<1.0.0",
    "mkdocs-section-index>=0.3.9,<1.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# ty configuration - pre-alpha type checker from Astral
# See: https://docs.astral.sh/ty/
